--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -5,3 +5,7 @@
     url('./fonts/Gilroy-Heavy.woff2') format('woff2'),
     url('./fonts/Gilroy-Heavy.otf') format('opentype');
 }
+@font-face {
+  font-family: 'Roboto Mono light';
+  src: url('./fonts/RobotoMono-Light.ttf');
+}
