--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,7 +8,8 @@ body {
   line-height: $base-line-height;
   max-width: $page-max-width;
   margin: 0px auto;
-  color: #333;
+  color: rgba(0, 0, 0, 0.7);
+  padding: 20px 0;
 }
 
 h1,
@@ -19,6 +20,7 @@ h5,
 h6 {
   font-family: $headings-font-family;
   text-transform: capitalize;
+  color: #000;
 }
 h1 {
   font-size: 50px;
@@ -28,4 +30,22 @@ h2 {
 }
 h3 {
   font-size: 20px;
+}
+
+.container {
+  margin-top: 30px;
+}
+.bold {
+  font-weight: 500;
+  padding: 10px 0;
+}
+.disc {
+  list-style-type: disc;
+  list-style-position: inside;
+}
+ul li {
+  padding-left: $spacing-unit/2;
+}
+.code {
+  font-family: 'Roboto Mono light';
 }
